--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vue Twitter Streaming</title>
+    <title>Tildefind</title>
     <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="css/all-the-things.css" />
